--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "lint": "eslint .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,5 +13,13 @@
     "debug": "~2.6.9",
     "express": "~4.21.2",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.2"
   }
 }
