feat: add shipments and clean up db creation

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,9 @@
     "supertest": "^7.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setupTests.js"
+    ]
   }
 }
